[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/fonts/digitalix.ttf" type="FontFile" id=1]
[ext_resource path="res://assets/images/checked.png" type="Texture2D" id=2]
[ext_resource path="res://assets/images/unchecked.png" type="Texture2D" id=3]
[ext_resource path="res://src/PowerPong.tres" type="Theme" id=4]
[ext_resource path="res://src/scripts/Options.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="FontFile" id=2]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="FontFile" id=3]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="FontFile" id=4]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="FontFile" id=5]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="FontFile" id=6]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="FontFile" id=7]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="FontFile" id=8]
size = 64
font_data = ExtResource( 1 )

[node name="Options" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_right = -64.0
theme_override_constants/separation = 64
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxPlayerName" type="VBoxContainer" parent="Panel/VBox"]
process_priority = 16
offset_top = 629.0
offset_right = 952.0
offset_bottom = 773.0

[node name="PlayerName" type="Label" parent="Panel/VBox/VBoxPlayerName"]
offset_right = 952.0
offset_bottom = 65.0
theme_override_fonts/font = SubResource( 2 )
text = "PLAYER NAME"
align = 1
valign = 1

[node name="LineEdit" type="LineEdit" parent="Panel/VBox/VBoxPlayerName"]
offset_top = 69.0
offset_right = 952.0
offset_bottom = 144.0
theme_override_fonts/font = SubResource( 3 )

[node name="VBoxAudio" type="VBoxContainer" parent="Panel/VBox"]
offset_top = 837.0
offset_right = 952.0
offset_bottom = 1080.0
theme_override_constants/separation = 16
alignment = 1

[node name="Label" type="Label" parent="Panel/VBox/VBoxAudio"]
offset_right = 952.0
offset_bottom = 65.0
theme_override_fonts/font = SubResource( 4 )
text = "AUDIO"
align = 1
valign = 1

[node name="MusicCheck" type="CheckButton" parent="Panel/VBox/VBoxAudio"]
offset_top = 81.0
offset_right = 952.0
offset_bottom = 154.0
grow_horizontal = 2
grow_vertical = 2
theme_override_icons/off = ExtResource( 3 )
theme_override_icons/on = ExtResource( 2 )
theme_override_fonts/font = SubResource( 5 )
pressed = true
text = "music"

[node name="SoundCheck" type="CheckButton" parent="Panel/VBox/VBoxAudio"]
offset_top = 170.0
offset_right = 952.0
offset_bottom = 243.0
theme_override_icons/off = ExtResource( 3 )
theme_override_icons/on = ExtResource( 2 )
theme_override_fonts/font = SubResource( 6 )
pressed = true
text = "EFFECTS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBox"]
offset_top = 1144.0
offset_right = 952.0
offset_bottom = 1290.0
theme = ExtResource( 4 )
theme_override_constants/separation = 16

[node name="Save" type="Button" parent="Panel/VBox/VBoxContainer"]
offset_right = 952.0
offset_bottom = 65.0
theme_override_fonts/font = SubResource( 7 )
text = "SAVE"

[node name="Cancel" type="Button" parent="Panel/VBox/VBoxContainer"]
offset_top = 81.0
offset_right = 952.0
offset_bottom = 146.0
theme_override_fonts/font = SubResource( 8 )
text = "CANCEL"
[connection signal="pressed" from="Panel/VBox/VBoxContainer/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="Panel/VBox/VBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
